--- a/src/components/PokeDetail.css
+++ b/src/components/PokeDetail.css
@@ -7,9 +7,18 @@
   margin: 10vh 6vw 5vh 6vw;
   background: linear-gradient(45deg, #ffe1c6, #ffcb05);
   border-radius: 20px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .pokeImage {
-  height: 70vh;
-  margin-top: -30vh;
+  height: 250px;
+  margin-top: -12vh;
+}
+
+.description-header {
+  display: flex;
+  justify-content: center;
+  font-size: 36px;
 }
