--- a/src/components/NavBar.css
+++ b/src/components/NavBar.css
@@ -19,12 +19,15 @@ input {
   border: none;
   border-radius: 30px;
   padding: 0 5vw;
+
   font-size: 30px;
   color: #909090;
+  padding-bottom: 1vh;
 }
 
 /* Die Textfarbe des Platzhalters ändern */
 input::placeholder {
   color: #909090;
   cursor: pointer;
+  font-size: 16px;
 }
