--- a/src/App.css
+++ b/src/App.css
@@ -23,3 +23,14 @@
 .blueBG {
   background-color: #ccdadd;
 }
+
+span {
+  font-family: roboBold;
+}
+
+.pokeType {
+  margin: 1rem;
+  border: 1px solid black;
+  padding: 0.3rem 2rem;
+  border-radius: 8px;
+}
