--- a/src/components/PokeDetail.css
+++ b/src/components/PokeDetail.css
@@ -20,5 +20,24 @@
 .description-header {
   display: flex;
   justify-content: center;
-  font-size: 36px;
+  font-size: 45px;
+}
+
+.description-header .textBG {
+  position: absolute;
+  -webkit-text-stroke: 13px #2c72b8;
+}
+
+.textBG span {
+  padding: 1vw;
+}
+.orangeText span {
+  z-index: 2;
+  position: relative;
+  color: #ffcb05;
+  padding: 0 1vw;
+}
+
+.description-types {
+  color: white;
 }
