--- a/src/App.css
+++ b/src/App.css
@@ -38,3 +38,104 @@ span {
 .dark {
   background-color: darkgray;
 }
+
+/* ---  Menu CSS ---- */
+
+.typeHeader {
+  padding: 2vh 6vw;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.closeButton {
+  border: none;
+  background-color: #ccdadd;
+}
+.description-header {
+  margin-top: 7vh;
+  margin-bottom: 5vh;
+}
+.orangeText2 {
+  z-index: 2;
+  position: relative;
+  color: #ffcb05;
+  padding: 0 1vw;
+}
+
+.typeGrid {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+}
+
+.typeWrapper {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 10px auto 10px auto;
+  background-color: #3498db;
+  width: 120px;
+  border-radius: 5px;
+}
+
+.imputTypes {
+  display: none;
+}
+.typeLable {
+  position: relative;
+  padding: 5px 10px; /* Innenabstand des Labels */
+  border-radius: 5px; /* Abrundung der Ecken des Labels */
+  cursor: pointer;
+  color: #fff;
+  font-family: roboBold;
+  text-transform: uppercase;
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 900;
+  line-height: normal;
+  text-align: center;
+}
+
+.searchWrapper {
+  display: flex;
+  justify-content: center;
+}
+
+.pokeSearch {
+  margin-top: 5vh;
+  margin-bottom: 15vh;
+  width: 30vw;
+  height: 5vh;
+  background-color: #ffcb05;
+  border-radius: 10px;
+  border: 5px solid #2c72b8;
+  color: #2c72b8;
+
+  text-align: center;
+  text-transform: uppercase;
+  font-family: roboBold;
+  font-size: 24px;
+  font-style: normal;
+  font-weight: 900;
+  line-height: normal;
+}
+
+.pokeSearch:hover {
+  color: #ffcb05;
+  background-color: #2c72b8;
+}
+
+.typeLable:hover {
+  color: #ffcb05;
+}
+
+/* ---------------------- */
+
+.animation-wrapper {
+  position: relative;
+  top: -1rem;
+  overflow: visible;
+  min-height: 75vh;
+  background-color: #ccdadd;
+  height: 100%;
+}
