--- a/src/components/Card.css
+++ b/src/components/Card.css
@@ -16,6 +16,15 @@
   border-radius: 20px;
 }
 
+/* !!! */
+
+.dark .cardBG {
+  background: none;
+  background: linear-gradient(45deg, #909091, #32353a);
+}
+
+/* !!! */
+
 .imageWrapper {
   display: flex;
   justify-content: center;
