extra loading works

--- a/src/components/Card.css
+++ b/src/components/Card.css
@@ -39,3 +39,8 @@
   border-bottom-left-radius: 20px;
   border-bottom-right-radius: 20px;
 }
+
+.pikachu-gif {
+  position: relative;
+  top: 3rem;
+}
